# soramimi-phonetic-search-experiments

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
analytics/: edit_distance_tokenization_hypothesis.py  kana_edit_distance_nonreasoning.py  mora_edit_distance_nonreasoning.py  mora_segmentation_nonreasoning.py  qiita_mora_distance_prompt_comparison.md
analytics/results/: edit_distance_tokenization_hypothesis_gpt-5.4_sample100_seed7.json  kana_edit_distance_nonreasoning_gpt-5.4_promptkana_spaced_small_sample100_seed7.json  kana_edit_distance_nonreasoning_gpt-5.4_small_sample100_seed7.json  mora_edit_distance_nonreasoning_gpt-5.4_promptkana_only_small_sample100_seed7.json  mora_edit_distance_nonreasoning_gpt-5.4_promptkana_only_with_mora_hint_small_sample100_seed7.json  mora_edit_distance_nonreasoning_gpt-5.4_small_sample100_seed7.json  mora_edit_distance_nonreasoning_gpt-5.4_small_sample3_seed7.json  mora_segmentation_nonreasoning_gpt-5.4_small_sample100_seed7.json
manual_tests/: run_openai_mora_edit_distance.py
reproduce_leaderboard/: README.md  run_all.sh
reproduce_leaderboard/ablations/: mora_edit_distance_nonreasoning.py
reproduce_leaderboard/methods/: 008_01_llm_rerank_gpt54_simple.py  008_02_llm_rerank_gpt54_detailed.py  008_03_llm_rerank_gpt54_step_by_step.py  008_llm_rerank_gpt54.py  (+13 more)
tests/: test_batch_reranker.py  test_edit_distance_tokenization_hypothesis.py  test_kana_edit_distance_nonreasoning.py  test_mora_edit_distance_nonreasoning.py  test_mora_segmentation_nonreasoning.py  test_reranker.py
(+32 files in other folders)
